fix[detailsCollapse]: correção do colapse brusco que estava acontecendo.

--- a/navbar.css
+++ b/navbar.css
@@ -1,7 +1,8 @@
 .nav-container {
   margin-top: -1rem;
   position: sticky;
-  top: 0; 
+  top: 0;
+  z-index: 2;
 }
 
 .hamburger-btn {
